--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/purrcat259/elite-dangerous-commodity-bot/issues"
   },
-  "homepage": "https://github.com/purrcat259/elite-dangerous-commodity-bot#readme"
+  "homepage": "https://github.com/purrcat259/elite-dangerous-commodity-bot#readme",
+  "devDependencies": {
+    "fuse-box": "^3.2.2"
+  }
 }
