Removed unrequired dependency

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "homepage": "https://github.com/purrcat259/elite-dangerous-commodity-bot#readme",
   "devDependencies": {
-    "tmi.js": "^1.2.1",
-    "xmlhttprequest": "^1.8.0"
+    "tmi.js": "^1.2.1"
   },
   "dependencies": {
     "sqlite3": "^4.0.0"
